fixed syntax error and import item grid sass file

--- a/scss/_item_grid.scss
+++ b/scss/_item_grid.scss
@@ -4,7 +4,7 @@
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
 }
 
-.tems {
+.item {
     position: relative;
     background: $main-color;
     overflow: hidden;
