--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -69,7 +69,7 @@
     #contact {
         &-a {
             .text-fields {
-                grid-template-areas: 'name' 'subject' 'email' 'phome' 'message'
+                grid-template-areas: 'name' 'subject' 'email' 'phone' 'message'
             }
         }
         &-b {
@@ -102,7 +102,7 @@
 }
 
 // Landscape
-@media(max-height: 580px) {
+@media (max-height: 580px) {
     #header-home {
         .header-content {
             padding-top: 3rem;
@@ -110,7 +110,7 @@
     }
 }
 
-@media(max-height: 330px) {
+@media (max-height: 330px) {
     #header-home {
         .header-content {
             h1 {
