--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,7 +35,7 @@ img {
 #logo {
     width: 70px;
     height: 70px;
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
 }
 
@@ -52,7 +52,7 @@ img {
     }
     a {
         text-decoration: none;
-        color: #fff;
+        color: #000;
         text-transform: uppercase;
         border-bottom: 3px transparent solid;
         padding-bottom: 0.5rem;
@@ -97,7 +97,7 @@ img {
             margin-top: 3rem;
             display: grid;
             grid-gap: 1rem;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             .fas {
                 color: $main-color;
                 padding-bottom: 0.4rem;
@@ -105,31 +105,31 @@ img {
         }
     }
     // Home Section B
-    &-b {
-        .stats {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            li {
-                line-height: 2;
-                &.stats-title {
-                    font-size: 1.5rem;
-                }
-                &.stats-number {
-                    font-size: 2rem;
-                    font-weight: bold;
-                }
-            }
-            div {
-                padding: 3rem 0;
-                &:nth-child(odd) {
-                    background: $light-color;
-                }
-                &:nth-child(even) {
-                    background: $medium-color;
-                }
-            }
-        }
-    }
+    // &-b {
+    //     .stats {
+    //         display: grid;
+    //         grid-template-columns: repeat(4, 1fr);
+    //         li {
+    //             line-height: 2;
+    //             &.stats-title {
+    //                 font-size: 1.5rem;
+    //             }
+    //             &.stats-number {
+    //                 font-size: 2rem;
+    //                 font-weight: bold;
+    //             }
+    //         }
+    //         div {
+    //             padding: 3rem 0;
+    //             &:nth-child(odd) {
+    //                 background: $light-color;
+    //             }
+    //             &:nth-child(even) {
+    //                 background: $medium-color;
+    //             }
+    //         }
+    //     }
+    // }
     // Home Section C
     &-c {
         .process {
@@ -251,8 +251,11 @@ img {
     &-b {
         .contact-info {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(1, 1fr);
             text-align: center;
+            .fas {
+                color: #fff;
+            }
         }
     }
     &-c {
