--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,9 +1,12 @@
 // Tablets & Smaller
-@media (max-width: 800px) {
+@media (max-width: 1050px) {
 	#header-home {
 		height: 30rem;
 		.header-content {
 			padding-top: 5rem;
+		}
+		.items {
+			grid-template-columns: 1fr;
 		}
 	}
 }
